usart + dac example

--- a/urack.ioc
+++ b/urack.ioc
@@ -40,7 +40,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true
+NVIC.USART1_IRQn=true\:5\:0\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false
 PA10.Locked=true
 PA10.Mode=Asynchronous
@@ -188,8 +188,10 @@ SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1
 SH.COMP_DAC11_group.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-USART1.IPParameters=VirtualMode-Asynchronous
+USART1.BaudRate=31250
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,WordLength
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART1.WordLength=WORDLENGTH_8B
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
